# oj-mcp-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
npm/: package.json.tmpl
npm/oj-mcp-rs/: package.json  tsconfig.json
npm/oj-mcp-rs/src/: index.ts
openspec/changes/archive/2026-02-26-oj-mcp-rs-initial-implementation/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-26-oj-mcp-rs-initial-implementation/specs/: convert.md  core.md  distribution.md  tools.md
src/: client.rs  convert.rs  error.rs  main.rs  models.rs
src/tools/: daily.rs  mod.rs  problem.rs  resolve.rs  similar.rs  status.rs
