[package]
name = "oj-mcp-rs"
version = "0.1.2"
edition = "2024"

[dependencies]
rmcp = { version = "=0.16.0", features = ["macros", "server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
htmd = "0.5"
ammonia = "4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["clock"], default-features = false }
urlencoding = "2"
url = "2"
